--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,21 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="actionBarStyle">@style/ActionBar.Solid.Beermecum</item>
     </style>
+
+    <style name="ForecastTheme" parent="AppTheme">
+        <item name="actionBarStyle">@style/ActionBar.Solid.Beermecum.NoTitle</item>
+    </style>
+
+    <style name="ActionBar.Solid.Beermecum" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="background">@color/beermecum_brown</item>
+    </style>
+
+    <style name="ActionBar.Solid.Beermecum.NoTitle" parent="@style/ActionBar.Solid.Beermecum">
+        <item name="displayOptions">useLogo|showHome</item>
+        <item name="logo">@drawable/ic_logo</item>
+    </style>
+
 
 </resources>
