--- a/app/src/main/res/layout/list_item_beer.xml
+++ b/app/src/main/res/layout/list_item_beer.xml
@@ -10,7 +10,7 @@
 
     <FrameLayout
         android:layout_width="60dp"
-        android:layout_height="wrap_content">
+        android:layout_height="fill_parent">
 
         <ImageView
             android:id="@+id/list_item_icon"
@@ -27,41 +27,26 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/list_item_date_textview"
+            android:id="@+id/list_item_beer_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/list_item_forecast_textview"
+            android:id="@+id/list_item_breweries_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:textAppearance="?android:textAppearanceSmall" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
+    <TextView
+        android:id="@+id/list_item_beer_abv"
+        android:layout_width="60dp"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="?android:textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/list_item_high_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="sans-serif-condensed"
-            android:textAppearance="?android:textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/list_item_low_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="sans-serif-condensed"
-            android:textAppearance="?android:textAppearanceSmall" />
-    </LinearLayout>
 </LinearLayout>
