--- a/app/src/main/res/layout-large-land/activity_main.xml
+++ b/app/src/main/res/layout-large-land/activity_main.xml
@@ -14,5 +14,12 @@
         android:orientation="horizontal"
         android:layout_width="0dip"
         android:layout_height="match_parent"
-        android:layout_weight="2"></LinearLayout>
+        android:layout_weight="2">
+
+
+        <include
+            layout="@layout/my_detail_view"
+            android:id="@+id/mydetail_view" />
+
+    </LinearLayout>
 </LinearLayout>
