--- a/app/src/main/res/layout/list_item_beer.xml
+++ b/app/src/main/res/layout/list_item_beer.xml
@@ -47,6 +47,7 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed"
-        android:textAppearance="?android:textAppearanceLarge" />
+        android:textAppearance="?android:textAppearanceLarge"
+        android:gravity="center_vertical" />
 
 </LinearLayout>
