--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,103 +1,9 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:layout_gravity="left"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+    <include
+        android:id="@+id/mydetail_view"
+        layout="@layout/my_detail_view" />
 
-        <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_gravity="top"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_gravity="top"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/detail_beer_icon"
-                        android:layout_width="50sp"
-                        android:layout_height="50sp"
-                        android:contentDescription="Beer Photo" />
-
-                    <TextView
-                        android:fontFamily="sans-serif-condensed"
-                        android:id="@+id/detail_beer_name"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="24sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_gravity="top"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/detail_breweries_icon"
-                        android:layout_width="25sp"
-                        android:layout_height="25sp"
-                        android:contentDescription="Beer Photo" />
-
-                    <TextView
-                        android:id="@+id/detail_breweries_name"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textColor="@color/black"
-                        android:fontFamily="sans-serif-condensed"
-                        android:textAppearance="?android:textAppearanceSmall" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:gravity="right"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:fontFamily="sans-serif-light"
-                    android:id="@+id/detail_high_textview"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:textSize="96sp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:fontFamily="sans-serif-condensed"
-                android:id="@+id/detail_date_textview"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textColor="@color/grey_700"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <!-- Humidity, wind, pressure -->
-
-        <TextView
-            android:id="@+id/detail_beer_description"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:textAppearance="?android:textAppearanceLarge" />
-
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
