--- a/app/src/main/res/layout/my_detail_view.xml
+++ b/app/src/main/res/layout/my_detail_view.xml
@@ -1,6 +1,7 @@
 <app.beermecum.com.beermecum.MyDetailView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="10dp">
 
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,17 +13,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="1">
+
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:orientation="vertical">
@@ -30,14 +32,15 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="top"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/detail_beer_icon"
-                            android:layout_width="50sp"
-                            android:layout_height="50sp"
-                            android:contentDescription="Beer Photo" />
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:contentDescription="@string/detail_beer_photo"
+                            android:padding="10dp"
+                            android:layout_margin="10dp" />
 
                         <TextView
                             android:id="@+id/detail_beer_name"
@@ -45,20 +48,22 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-condensed"
                             android:textColor="@color/black"
-                            android:textSize="24sp" />
+                            android:textSize="34sp"
+                            android:layout_gravity="center_vertical" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="top"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/detail_breweries_icon"
-                            android:layout_width="30sp"
-                            android:layout_height="30sp"
-                            android:contentDescription="Beer Photo" />
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:contentDescription="@string/detail_breweries_photo"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginLeft="10dp" />
 
                         <TextView
                             android:id="@+id/detail_breweries_name"
@@ -66,18 +71,20 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-condensed"
                             android:textAppearance="?android:textAppearanceSmall"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:layout_gravity="center_vertical" />
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/detail_beer_abv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
                     android:textColor="@color/grey_700"
-                    android:textSize="16sp" />
+                    android:textSize="26sp"
+                    android:padding="10dp" />
 
             </LinearLayout>
 
@@ -88,6 +95,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceLarge" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="fill"
+                android:layout_margin="20dp">
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/buttonLike" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:visibility="invisible"
+                    android:id="@+id/button3" />
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/buttonDislike" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
