--- a/app/src/main/res/menu/menu_score.xml
+++ b/app/src/main/res/menu/menu_score.xml
@@ -4,7 +4,7 @@
     tools:context="app.beermecum.com.beermecum.ScoreActivity">
     <item
         android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title="@string/action_share"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
