--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -1,50 +1,66 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/score_back"
-    android:orientation="vertical"
-    android:paddingTop="20dp"
-    android:padding="20dp">
-
-    <TextView
-        android:id="@+id/pointDisplay"
-        android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/black">
+    <ImageView
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/beermecum_light_brown"
-        android:textSize="40sp" />
+        android:scaleType="fitEnd"
+        android:id="@+id/imageView"
+        android:src="@drawable/score_back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:paddingTop="20dp">
 
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/CustomProgressBar"
+        <TextView
+            android:id="@+id/pointDisplay"
             android:layout_width="match_parent"
-            android:layout_height="15dip"
-            android:layout_marginLeft="20dip"
-            android:layout_marginRight="5dip"
-            android:layout_marginTop="30dip"
-            android:layout_weight="0.8" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/progressDisplay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/beermecum_light_brown"
-        android:gravity="right"
-        android:paddingRight="20dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:visibility="invisible" />
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/beermecum_light_brown"
+            android:textSize="40sp" />
 
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/CustomProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="15dip"
+                android:layout_marginLeft="20dip"
+                android:layout_marginRight="5dip"
+                android:layout_marginTop="30dip"
+                android:layout_weight="0.8" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/progressDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:paddingRight="20dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/beermecum_light_brown" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="invisible" />
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
