one selection in list for table

--- a/app/src/main/res/layout-large-land/activity_main.xml
+++ b/app/src/main/res/layout-large-land/activity_main.xml
@@ -8,7 +8,8 @@
         android:layout_width="0dip"
         android:layout_height="match_parent"
         android:id="@+id/listBeer"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:choiceMode="singleChoice" />
 
     <LinearLayout
         android:orientation="horizontal"
