--- a/app/src/main/res/layout/my_detail_view.xml
+++ b/app/src/main/res/layout/my_detail_view.xml
@@ -17,7 +17,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:orientation="horizontal"
                 android:layout_weight="1">
 
